--- a/op-other-common-java/pom.xml
+++ b/op-other-common-java/pom.xml
@@ -6,7 +6,6 @@
   <name>operando-common</name>
   <description>Java code common to multiple modules</description>
   <build>
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -40,6 +39,11 @@
   		<groupId>com.google.code.gson</groupId>
   		<artifactId>gson</artifactId>
   		<version>2.6.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.httpcomponents</groupId>
+  		<artifactId>httpclient</artifactId>
+  		<version>4.5.2</version>
   	</dependency>
   </dependencies>
 </project>
