Changes the name of the project to follow the style
eu.operando.project

--- a/test-dependencies/.project
+++ b/test-dependencies/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test-dependencies</name>
+	<name>eu.operando.test.dependencies</name>
 	<comment></comment>
 	<projects>
 	</projects>
