OCC-specific configuration

--- a/eu.operando.provisioning.scripts/config/occ/repositoryManagersRegistry.yml
+++ b/eu.operando.provisioning.scripts/config/occ/repositoryManagersRegistry.yml
@@ -12,36 +12,10 @@
 #*  # Initially developed in the context of OPERANDO EU project www.operando.eu
 #*******************************************************************************/
 
-#repositoryManagers:
-#- { name: built-in, serviceId: op-pdr/rpm/built-in, schema: https, host: snf-706921.vm.okeanos.grnet.gr, port: 8443, serviceRoot: /op-pdr-rpm }
 repositoryManagers:
-- name: built-in
+- name: Ami
   serviceId: op-pdr/rpm/built-in
   schema: http
-  host: integration.operando.esilab.org
-  port: 8112
-  serviceRoot: /operando/pdr/rpm
-- name: YellowPages
-  serviceId: op-pdr/rpm/built-in
-  schema: http
-  host: integration.operando.esilab.org
-  port: 8112
-  serviceRoot: /operando/pdr/rpm
-- name: ASLBG_IL
-  serviceId: op-pdr/rpm/built-in
-  schema: http
-  host: www.operando.eu
+  host: 192.168.101.166
   port: 80
-  serviceRoot: /odata
-- name: GASL_CDS
-  serviceId: op-pdr/rpm/built-in
-  schema: http
-  host: www.operando.eu
-  port: 80
-  serviceRoot: /odata
-- name: ASLBG_GA
-  serviceId: op-pdr/rpm/built-in
-  schema: http
-  host: www.operando.eu
-  port: 80
-  serviceRoot: /odata
+  serviceRoot: /AmiOData/AmiOdataService.svc
